Fix scrollbar overflow issue

--- a/src/styles/Content.scss
+++ b/src/styles/Content.scss
@@ -6,7 +6,7 @@ html, body {
   background-color: #f5fdfc;
   overflow: hidden;
   background-size: 180%;
-  max-height: 98%;
+  // max-height: 98%;
 }
 h1 {
 	font-family: 'kayak_sans-light', sans-serif;
