--- a/src/styles/Menu.scss
+++ b/src/styles/Menu.scss
@@ -69,6 +69,6 @@
   background-color: rgb(0, 0, 0);
   left: 0px;
   top: .5vh;
-  max-height: 98%;
+  min-height: 102vh;
   position: absolute;
 }
